<resources>
    <string name="app_name">KotlinCampus</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="account">账号</string>
    <string name="psd">密码</string>
    <string name="welcome_text">看视频，上牛逼</string>
    <string name="login">确定</string>
    <string name="privacy">用户协议</string>
    <string name="privacy_check">请勾选相关用户协议</string>
    <string name="acc_null">账号不能为空</string>
    <string name="psd_null">密码不能为空</string>
    <string name="title_activity_main_home">MainHomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="message_switch">消息开关</string>
    <string name="open_message">开启</string>
</resources>